--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.2",
+    "rehype-format": "^4.0.1",
+    "rehype-raw": "^6.1.1",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
     "remark-preset-lint-markdown-style-guide": "^5.1.2",
+    "remark-rehype": "^10.1.0",
     "to-vfile": "^7.2.4",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
