--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "remark-preset-lint-markdown-style-guide": "^5.1.2",
     "remark-rehype": "^10.1.0",
     "to-vfile": "^7.2.4",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
     "unified": "^10.1.2"
   },
@@ -31,7 +32,6 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "postcss": "^8.4.21",
-    "sass": "^1.59.2",
-    "tailwindcss": "^3.2.7"
+    "sass": "^1.59.2"
   }
 }
