--- a/package.json
+++ b/package.json
@@ -10,28 +10,26 @@
   },
   "dependencies": {
     "@types/node": "18.15.0",
-    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react": "18.0.28",
+    "autoprefixer": "^10.4.14",
+    "eslint-config-next": "13.2.4",
+    "eslint": "8.36.0",
     "gray-matter": "^4.0.3",
     "next": "13.2.4",
-    "react": "18.2.0",
+    "postcss": "^8.4.21",
     "react-dom": "18.2.0",
+    "react": "18.2.0",
     "rehype-format": "^4.0.1",
     "rehype-raw": "^6.1.1",
     "rehype-stringify": "^9.0.3",
     "remark-parse": "^10.0.1",
     "remark-preset-lint-markdown-style-guide": "^5.1.2",
     "remark-rehype": "^10.1.0",
-    "to-vfile": "^7.2.4",
+    "sass": "^1.59.2",
     "tailwindcss": "^3.2.7",
+    "to-vfile": "^7.2.4",
     "typescript": "4.9.5",
     "unified": "^10.1.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "postcss": "^8.4.21",
-    "sass": "^1.59.2"
   }
 }
