--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,6 @@
+[context.production]
+publish = ".next/"
+command = "npm run build"
+
 [[context.production.plugins]]
 package = "@netlify/plugin-nextjs"
