--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.0",
+    "@types/node": "^20.10.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "gray-matter": "^4.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rehype-format": "^4.0.1",
-    "rehype-raw": "^6.1.1",
-    "rehype-stringify": "^9.0.3",
-    "remark-parse": "^10.0.1",
+    "rehype-format": "^5.0.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
     "remark-preset-lint-markdown-style-guide": "^5.1.2",
-    "remark-rehype": "^10.1.0",
-    "to-vfile": "^7.2.4",
+    "remark-rehype": "^11.0.0",
+    "to-vfile": "^8.0.0",
     "typescript": "4.9.5",
-    "unified": "^10.1.2"
+    "unified": "^11.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
@@ -33,5 +33,8 @@
     "postcss": "^8.4.21",
     "sass": "^1.59.2",
     "tailwindcss": "^3.2.7"
+  },
+  "volta": {
+    "node": "20.10.0"
   }
 }
