--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/plugin-emitters": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "@types/node": "^20.10.5",
-    "@types/react-dom": "18.0.11",
     "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
-    "eslint-config-next": "13.2.4",
     "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
     "gray-matter": "^4.0.3",
     "next": "13.2.4",
     "postcss": "^8.4.21",
-    "react-dom": "18.2.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "rehype-format": "^5.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
@@ -27,6 +32,7 @@
     "remark-preset-lint-markdown-style-guide": "^5.1.2",
     "remark-rehype": "^11.0.0",
     "sass": "^1.59.2",
+    "swiper": "^11.1.15",
     "tailwindcss": "^3.2.7",
     "to-vfile": "^8.0.0",
     "typescript": "4.9.5",
