--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
     "@tsparticles/plugin-emitters": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
-    "@types/node": "^20.10.5",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.4",
     "gray-matter": "^4.0.3",
-    "next": "13.2.4",
+    "next": "^15.1.4",
     "postcss": "^8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rehype-format": "^5.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
-    "remark-preset-lint-markdown-style-guide": "^5.1.2",
+    "remark-preset-lint-markdown-style-guide": "^6.0.0",
     "remark-rehype": "^11.0.0",
     "sass": "^1.59.2",
     "swiper": "^11.1.15",
     "tailwindcss": "^3.2.7",
     "to-vfile": "^8.0.0",
-    "typescript": "4.9.5",
+    "typescript": "^5.7.3",
     "unified": "^11.0.4"
   },
   "volta": {
-    "node": "20.10.0"
+    "node": "22.13.0"
   }
 }
