--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ts-lint": "tsc --noEmit"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@tsparticles/engine": "^3.7.1",
     "@tsparticles/plugin-emitters": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
@@ -17,7 +18,6 @@
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
-    "autoprefixer": "^10.4.14",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.4",
     "gray-matter": "^4.0.3",
@@ -33,7 +33,7 @@
     "remark-rehype": "^11.0.0",
     "sass": "^1.59.2",
     "swiper": "^11.1.15",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^4.1.4",
     "to-vfile": "^8.0.0",
     "typescript": "^5.7.3",
     "unified": "^11.0.4"
