--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
 publish = ".next/"
 command = "npm run build"
 
-[[context.production.plugins]]
+[[context.new.plugins]]
 package = "@netlify/plugin-nextjs"
 
