--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "ts-lint": "tsc --noEmit"
   },
   "dependencies": {
@@ -17,15 +17,15 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
     "@types/node": "^22.10.5",
-    "@types/react": "^19.0.4",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.4",
+    "eslint-config-next": "16.1.6",
     "gray-matter": "^4.0.3",
-    "next": "^15.1.4",
+    "next": "16.1.6",
     "postcss": "^8.4.21",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "rehype-format": "^5.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
@@ -40,5 +40,10 @@
   },
   "volta": {
     "node": "22.13.0"
-  }
+  },
+  "overrides": {
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3"
+  },
+  "devDependencies": {}
 }
