--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "typescript": "^5.7.3",
     "unified": "^11.0.4"
   },
-  "volta": {
-    "node": "22.13.0"
+  "engines": {
+    "node": "24.13.0"
   },
   "overrides": {
     "@types/react": "19.2.10",
